# vector_math

./: .gitignore  CMakeLists.txt  README.md
src/: mat3.cpp  mat3.hpp  mat4.cpp  mat4.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
tests/: .gitignore  CMakeLists.txt
tests/src/: mat3.cpp  mat4.cpp  test.hpp  vec3.cpp
